<?xml version="1.0" encoding="utf-8"?>

<android.support.v7.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    app:cardBackgroundColor="@color/white"
    app:cardElevation="@dimen/medium_padding">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="@dimen/default_margin">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/medium_padding"
            style="@style/TaskTitle"
            android:gravity="center_horizontal"
            android:drawableStart="@drawable/form"
            android:background="@color/orange"
            android:textColor="@color/white"
            android:text="@string/employee_entry_form"/>

        <com.linearbd.sitemanager.CustomView.MyEditText
            style="@style/MyEditTextStyle"
            android:id="@+id/name"
            android:hint="@string/enter_name"/>

        <com.linearbd.sitemanager.CustomView.MyEditText
            style="@style/MyEditTextStyle"
            android:id="@+id/designation"
            android:hint="@string/enter_designation"/>

        <com.linearbd.sitemanager.CustomView.MyEditText
            style="@style/MyEditTextStyle"
            android:id="@+id/father_name"
            android:hint="@string/enter_father_name"/>

        <com.linearbd.sitemanager.CustomView.MyEditText
            style="@style/MyEditTextStyle"
            android:id="@+id/contact_no"
            android:inputType="phone"
            android:hint="@string/enter_contact_no" />

        <com.linearbd.sitemanager.CustomView.MyEditText
            style="@style/MyEditTextStyle"
            android:id="@+id/nid"
            android:inputType="number"
            android:hint="@string/enter_national_id_number"/>

        <com.linearbd.sitemanager.CustomView.MyEditText
            style="@style/MyEditTextStyle"
            android:id="@+id/address"
            android:layout_height="100dp"
            android:gravity="top|start"
            android:inputType="textMultiLine"
            android:hint="@string/address"
            android:maxLines="4"
            android:scrollbars="vertical"/>
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <com.linearbd.sitemanager.CustomView.MyEditText
                style="@style/MyEditTextStyle"
                android:id="@+id/date_of_birth"
                android:focusable="false"
                android:layout_toStartOf="@+id/date_picker"
                android:hint="@string/select_date_of_birth"/>


            <ImageView
                android:contentDescription="@string/date"
                android:id="@+id/date_picker"
                android:layout_width="36dp"
                android:layout_height="36dp"
                android:layout_alignParentEnd="true"
                android:layout_centerVertical="true"
                android:layout_marginStart="@dimen/medium_padding"
                android:layout_marginEnd="@dimen/medium_padding"
                app:srcCompat="@drawable/calendar_black"
                android:background="@drawable/ripple"/>
        </RelativeLayout>

        <LinearLayout
            android:layout_marginTop="@dimen/default_margin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/small_padding"
            android:background="@drawable/rect_back">
            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/select_gender"
                android:textSize="20sp"
                android:layout_gravity="center_vertical"/>

            <android.support.v7.widget.AppCompatSpinner
                android:id="@+id/gender_spinner"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_gravity="center_vertical">

            </android.support.v7.widget.AppCompatSpinner>
        </LinearLayout>

        <TextView
            android:layout_marginTop="@dimen/default_margin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/medium_padding"
            style="@style/TaskTitle"
            android:gravity="center_horizontal"
            android:drawableStart="@drawable/select"
            android:background="@color/orange"
            android:textColor="@color/white"
            android:text="@string/select_image"/>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/rect_back"
            android:padding="@dimen/medium_padding">

            <ImageView
                android:id="@+id/employee_image"
                android:layout_width="120dp"
                android:layout_height="120dp"
                android:contentDescription="@string/employee_image"
                android:layout_margin="@dimen/medium_padding"
                android:background="@drawable/rect_back"/>

            <Button
                android:id="@+id/upload"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/select"
                android:layout_alignParentEnd="true"
                android:layout_alignParentBottom="true"
                android:drawableStart="@drawable/select"
                android:textColor="@color/white"
                android:background="@drawable/rect_ripple"/>

        </RelativeLayout>
        <Button
            android:layout_marginTop="@dimen/default_margin"
            android:id="@+id/add_employee"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/rect_ripple"
            android:text="@string/add_employee"
            android:textColor="@color/white"
            android:layout_gravity="center_horizontal"
            android:drawableStart="@drawable/add"/>


    </LinearLayout>

</android.support.v7.widget.CardView>
