<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <android.support.v7.widget.CardView
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardBackgroundColor="@color/white"
        app:cardElevation="@dimen/medium_padding">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/TaskTitle"
                android:padding="@dimen/medium_padding"
                android:gravity="center_horizontal"
                android:textColor="@color/white"
                android:background="@color/orange"
                android:drawableStart="@drawable/form"
                android:text="@string/store_item_consumption_form"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="@dimen/medium_padding">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <com.linearbd.sitemanager.CustomView.MyEditText
                        style="@style/MyEditTextStyle"
                        android:id="@+id/date"
                        android:focusable="false"
                        android:layout_centerVertical="true"
                        android:layout_toStartOf="@+id/date_picker"
                        android:layout_marginEnd="@dimen/medium_padding"
                        android:hint="@string/select_date"/>

                    <android.support.design.widget.FloatingActionButton
                        android:id="@+id/date_picker"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentEnd="true"
                        app:elevation="@dimen/medium_padding"
                        app:fabSize="normal"
                        android:layout_centerVertical="true"
                        app:srcCompat="@drawable/calendar_black" />

                </RelativeLayout>

                <com.linearbd.sitemanager.CustomView.MyAutoCompleteTextView
                    style="@style/MyEditTextStyle"
                    android:id="@+id/item_name"
                    android:hint="@string/item_name"/>

                <com.linearbd.sitemanager.CustomView.MyEditText
                    style="@style/MyEditTextStyle"
                    android:id="@+id/issue_to"
                    android:hint="@string/issue_to"/>

                <com.linearbd.sitemanager.CustomView.MyEditText
                    style="@style/MyEditTextStyle"
                    android:id="@+id/where_use"
                    android:hint="@string/used_in"/>

                <com.linearbd.sitemanager.CustomView.MyEditText
                    style="@style/MyEditTextStyle"
                    android:id="@+id/mrr_no"
                    android:hint="@string/mrrNo"/>

                <com.linearbd.sitemanager.CustomView.MyEditText
                    style="@style/MyEditTextStyle"
                    android:id="@+id/quantity"
                    android:inputType="numberDecimal"
                    android:hint="@string/quantity" />

                <com.linearbd.sitemanager.CustomView.MyAutoCompleteTextView
                    style="@style/MyEditTextStyle"
                    android:id="@+id/unit"
                    android:hint="@string/unit" />

                <Button
                    android:id="@+id/store_out"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/default_margin"
                    style="@style/MyButton"
                    android:layout_gravity="center_horizontal"
                    android:text="@string/save"/>

            </LinearLayout>



        </LinearLayout>

    </android.support.v7.widget.CardView>

</RelativeLayout>
