<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="@dimen/large_padding"
    tools:context=".ui.main.settings.SettingsFragment">
    
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="@dimen/large_text_size"
        android:padding="@dimen/medium_padding"
        android:text="@string/choose_language"/>

    <View
        android:layout_marginTop="@dimen/small_padding"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/colorPrimary"/>

    <RadioGroup
        android:id="@+id/radioLang"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" >

        <RadioButton
            android:id="@+id/radioEnglish"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/radio_english" />

        <RadioButton
            android:id="@+id/radioBangla"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/radio_bangla" />

    </RadioGroup>



    <View
        android:layout_marginTop="@dimen/default_margin"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/colorPrimary"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        style="@style/MyButton"
        android:text="@string/update"
        android:layout_gravity="center_horizontal"
        android:id="@+id/update"/>

    
    

</LinearLayout>