<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/title"
                style="@style/TaskTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/colorPrimary"
                android:drawableStart="@drawable/form"
                android:gravity="center_horizontal"
                android:padding="@dimen/medium_padding"
                android:text="@string/project_entry_form"
                android:textColor="@color/white" />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="@dimen/medium_padding">

                <android.support.design.widget.TextInputLayout
                    android:id="@+id/ti_project_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <EditText
                        android:id="@+id/et_project_name"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/enter_project_name"
                        android:inputType="text"
                        android:paddingStart="@dimen/default_margin"
                        android:theme="@style/TIStyle" />

                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    android:id="@+id/ti_project_location"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/ti_project_name"
                    android:layout_marginTop="@dimen/small_padding">

                    <EditText
                        android:id="@+id/et_project_location"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/enter_project_location"
                        android:inputType="text"
                        android:paddingStart="@dimen/default_margin"
                        android:theme="@style/TIStyle" />

                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    android:id="@+id/ti_project_description"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/ti_project_location"
                    android:layout_marginTop="@dimen/small_padding">

                    <EditText
                        android:id="@+id/et_project_description"
                        android:layout_width="match_parent"
                        android:layout_height="72dp"
                        android:hint="@string/enter_project_description"
                        android:inputType="text"
                        android:paddingStart="@dimen/default_margin"
                        android:theme="@style/TIStyle" />

                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    android:id="@+id/ti_start_date"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/ti_project_description"
                    android:layout_marginTop="@dimen/small_padding">

                    <EditText
                        android:id="@+id/et_start_date"
                        android:layout_width="match_parent"
                        android:layout_height="72dp"
                        android:hint="@string/select_start_date"
                        android:inputType="text"
                        android:paddingStart="@dimen/default_margin"
                        android:theme="@style/TIStyle" />

                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    android:id="@+id/ti_completion_date"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/ti_start_date"
                    android:layout_marginTop="@dimen/small_padding">

                    <EditText
                        android:id="@+id/et_completion_date"
                        android:layout_width="match_parent"
                        android:layout_height="72dp"
                        android:hint="@string/select_completion_date"
                        android:inputType="text"
                        android:paddingStart="@dimen/default_margin"
                        android:theme="@style/TIStyle" />

                </android.support.design.widget.TextInputLayout>


                <Button
                    android:id="@+id/add_project"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/ti_completion_date"
                    android:layout_centerHorizontal="true"
                    android:layout_marginBottom="@dimen/default_margin"
                    android:layout_marginTop="@dimen/small_padding"
                    android:background="@drawable/rect_ripple"
                    android:text="@string/submit"
                    android:textColor="@color/white" />

            </RelativeLayout>
        </LinearLayout>


    </ScrollView>

</RelativeLayout>